modules/module-2/lesson-05-tracing/k8s-opentelemetry-jaeger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datascrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      application: datascraper
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: "true"
        instrumentation.opentelemetry.io/otel-python-platform: "glibc" # for Linux glibc based images, this is the default value and can be omitted
        # instrumentation.opentelemetry.io/otel-python-platform: "musl"
      labels:
        application: datascraper
    spec:
      serviceAccountName: datacrapper-account
      containers:
        - name: data-scrapper
          image: windblow/k8s-data-scraper:0.2.0
          imagePullPolicy: Always
