modules/module-2/lesson-05-tracing/k8s-opentelemetry-jaeger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datascraper
spec:
  selector:
    application: datascraper
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
